Updated color scheme, variable names, and changed flex-direction for main-content so the sidebar will display on the right side

--- a/blog.html
+++ b/blog.html
@@ -38,7 +38,7 @@
 <body>
   <header>
     <div class="content-wrapper">
-      <i class="fas fa-cut fa-2x"></i>
+      <i class="fas fa-code fa-2x"></i>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
