--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
   <header>
     <div class="content-wrapper">
-      <i class="fas fa-cut fa-2x"></i>
+      <i class="fas fa-code fa-2x"></i>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
