Changed border-radius style for block-link styles, restructured files to cdivide website into hubs

--- a/about.html
+++ b/about.html
@@ -118,6 +118,7 @@
             </div>
           </div>
         </aside>
+      </section>
   </main>
   <footer>
     <div class="content-wrapper">
