--- a/blog.html
+++ b/blog.html
@@ -42,7 +42,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="blog.html">Blog</a></li>
         </ul>
     </div>
