--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Emery's Studio</title>
+  <title>Emery Studio</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="manifest" href="site.webmanifest">
@@ -12,9 +12,8 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/main.scss">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;700;900&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/33391c5587.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;700;900&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/33391c5587.js" crossorigin="anonymous"></script>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
@@ -47,113 +46,22 @@
   <main>
     <section id="hero">
       <div class="content-wrapper">
-        <h1 class="hero-logo-span">
-          emery<span>.</span>studio
-        </h1>
+        <h1 class="hero-logo-span">emery<span>.</span>studio</h1>
       </div>
     </section>
-    <section id="main-content">
-      <div class="blog front-page">
-        <div class="content-wrapper">
-          <div class="blog-single-post-gradient-wrapper">
-            <article class="blog-single-post">
-              <h1>Light Up Crochet Sweater Pattern Using Adafruit Circuit Playground Express | Free Pattern</h1>
-              <h3 class="blog-post-metadata">Posted on December 01, 2020 by <span>Emmy</span></h3>
-              <img src="img/little-fires-everywhere.png" alt="Filler Image" />
-              <p class="blog-post-excerpt">
-                Non quam lacus suspendisse faucibus interdum posuere lorem ipsum dolor. Lectus magna fringilla urna porttitor rhoncus dolor. Sagittis id consectetur purus ut faucibus pulvinar elementum integer.
-              </p>
-            </article>
-          </div>
-          <div class="blog-single-post-gradient-wrapper">
-            <article class="blog-single-post">
-              <h1>How to Make A Light Up Amigurumi Octopus With Throughole LEDs | Free Tutorial</h1>
-            <h3 class="blog-post-metadata">Posted on December 01, 2020 by <span class="blog-post-author">Emmy</span></h3>
-            <img src="img/euphoria-filler-01.jpg" alt="Filler Image" />
-            <p class="blog-post-excerpt">
-              Non quam lacus suspendisse faucibus interdum posuere lorem ipsum dolor. Lectus magna fringilla urna porttitor rhoncus dolor. Sagittis id consectetur purus ut faucibus pulvinar elementum integer.
-            </p>
-            </article>
-          </div>
-          <div class="blog-single-post-gradient-wrapper">
-            <article class="blog-single-post">
-              <h1>What I've Learned After 1 Year of Being A Self-Taught Developer</h1>
-              <h3 class="blog-post-metadata">Posted on December 01, 2020 by <span class="blog-post-author">Emmy</span></h3>
-              <img src="img/happiest-season-filler-01.jpg" alt="Filler Image" />
-              <p class="blog-post-excerpt">
-                Non quam lacus suspendisse faucibus interdum posuere lorem ipsum dolor. Lectus magna fringilla urna porttitor rhoncus dolor. Sagittis id consectetur purus ut faucibus pulvinar elementum integer.
-            </p>
-            </article>
-          </div>
-          <div class="blog-single-post-gradient-wrapper">
-            <article class="blog-single-post">
-              <h1>When In Doubt: display: flex; It Out! | A Free Flexbox Tutorial</h1>
-              <h3 class="blog-post-metadata">Posted on December 01, 2020 by <span class="blog-post-author">Emmy</span></h3>
-              <img src="img/happiest-season-filler-01.jpg" alt="Filler Image" />
-              <p class="blog-post-excerpt">
-                Non quam lacus suspendisse faucibus interdum posuere lorem ipsum dolor. Lectus magna fringilla urna porttitor rhoncus dolor. Sagittis id consectetur purus ut faucibus pulvinar elementum integer.
-            </p>
-            </article>
-          </div>
-          <div class="blog-single-post-gradient-wrapper">
-            <article class="blog-single-post">
-              <h1>My Favorite Granny Square Patterns</h1>
-            <h3 class="blog-post-metadata">Posted on December 01, 2020 by <span class="blog-post-author">Emmy</span></h3>
-            <img src="img/euphoria-filler-01.jpg" alt="Filler Image" />
-            <p class="blog-post-excerpt">
-              Non quam lacus suspendisse faucibus interdum posuere lorem ipsum dolor. Lectus magna fringilla urna porttitor rhoncus dolor. Sagittis id consectetur purus ut faucibus pulvinar elementum integer.
-            </p>
-            </article>
-          </div>
+    <section id="hub-selection">
+      <div class="content-wrapper">
+        <h2>Choose A <span>Studio</span></h2>
+        <div id="hub-one" class="hub-link-container">
+          <a href="/crochet">Crochet Tech</a>
+          <span id="hub-description">
+            Exploring the intersections of art & technology
+          </span>
         </div>
+        <a href="/web-dev">Web Development</a>
+        <a href="/art">Art</a>
       </div>
-      <aside class="sidebar">
-        <div class="content-wrapper">
-          <div class="sidebar-about sidebar-section">
-            <h1 class="sidebar-logo-span">emery<span>.</span>studio
-              <span>is a glance into my life as a multidisciplinary artist, exploring</span>
-              <span>the intersection of technology and art.</span>
-            </h1>
-            <div class="sidebar-social-media">
-              <a href="https://twitter.com/theedykeagenda" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a>
-              <a href="https://instagram.com/dykeagenda/" target="_blank"><i class="fab fa-instagram-square fa-2x"></i></a>
-              <a href="https://emery.studio/" target="_blank"><i class="fas fa-palette fa-2x"></i></a>
-              <a href="https://ko-fi.com/" target="_blank"><i class="fas fa-mug-hot fa-2x"></i></a>
-            </div>
-          </div>
-          <div class="sidebar-browse-topic sidebar-section">
-            <h2>Browse By Topic</h2>
-            <a href="#">Crochet</a>
-            <a href="#">Coding</a>
-            <a href="#">Web Development</a>
-            <a href="#">Tutorials & Patterns</a>
-          </div>
-          <div class="sidebar-latest-posts sidebar-section">
-            <h2>The Latest Posts</h2>
-            <div class="sidebar-latest-posts-lists">
-              <a href="#">Light Up Crochet Sweater Pattern Using Adafruit Circuit Playground Express | Free Pattern</a>
-              <a href="#">How to Make A Light Up Amigurumi Octopus With Throughole LEDs | Free Tutorial</a>
-              <a href="#">What I've Learned After 1 Year of Being A Self-Taught Developer</a>
-            </div>
-          </div>
-          <div class="sidebar-search sidebar-section">
-            <h2>Search</h2>
-            <form>
-              <input type="text" placeholder="search"></input>
-              <button type="submit"><i class="fas fa-search"></i></button>
-            </form>
-          </div>
-          <div class="sidebar-newsletter sidebar-section">
-            <h2>Newsletter</h2>
-            <h3>Be the first to know
-              <span>about new posts!</span></h3>
-            <form>
-              <input type="text" placeholder="name@email.com"></input>
-              <input type="submit" value="Subscribe" class="newsletter-button"></input>
-            </form>
-          </div>
-        </div>
-      </aside>
+    </section>
   </main>
   <footer>
     <div class="content-wrapper">
