Added styles for hub selection on small screens

--- a/index.html
+++ b/index.html
@@ -58,8 +58,12 @@
             Exploring the intersections of art & technology
           </span>
         </div>
-        <a href="/web-dev">Web Development</a>
-        <a href="/art">Art</a>
+        <div id="hub-one" class="hub-link-container">
+          <a href="/web-dev">Web Development</a>
+          <span id="hub-description">
+            developer blog & <a href="/dev-portfolio" class="portfolio-link">portfolio</a>
+          </span>
+        </div>
       </div>
     </section>
   </main>
