Added styles for hub selection on large screens, enabling descriptions of hubs to be viewed on hover

--- a/index.html
+++ b/index.html
@@ -51,19 +51,21 @@
     </section>
     <section id="hub-selection">
       <div class="content-wrapper">
-        <h2>Choose A <span>Studio</span></h2>
-        <div id="hub-one" class="hub-link-container">
-          <a href="/crochet">Crochet Tech</a>
-          <span id="hub-description">
-            Exploring the intersections of art & technology
-          </span>
-        </div>
-        <div id="hub-one" class="hub-link-container">
-          <a href="/web-dev">Web Development</a>
-          <span id="hub-description">
-            developer blog & <a href="/dev-portfolio" class="portfolio-link">portfolio</a>
-          </span>
-        </div>
+        <h2>Choose A <span>Hub</span></h2>
+        <article class="hub-container">
+          <div id="hub-one" class="hub-link-container">
+            <a href="/crochet">Crochet Tech</a>
+            <span id="hub-description">
+              Exploring the intersections of art & technology via e-textiles, amigurumi, & wearable tech.
+            </span>
+          </div>
+          <div id="hub-one" class="hub-link-container">
+            <a href="/web-dev">Web Development</a>
+            <span id="hub-description">
+              Blogging about front-end development, learning Python & tutorials // <a href="/dev-portfolio" class="portfolio-link">portfolio</a>
+            </span>
+          </div>
+        </article>
       </div>
     </section>
   </main>
