Added coming soon page, built a mixin that animates the text for the coming soon page

--- a/about.html
+++ b/about.html
@@ -12,24 +12,24 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/main.scss">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;700;900&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/33391c5587.js" crossorigin="anonymous"></script>
-    <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-<link rel="manifest" href="/manifest.json">
-<meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-<meta name="theme-color" content="#ffffff">
+  <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;700;900&display=swap"
+    rel="stylesheet">
+  <script src="https://kit.fontawesome.com/33391c5587.js" crossorigin="anonymous"></script>
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -42,6 +42,7 @@
           <li><a href="#">About</a></li>
           <li><a href="blog.html">Blog</a></li>
         </ul>
+      </nav>
     </div>
   </header>
   <main>
@@ -51,74 +52,80 @@
       </div>
     </section>
     <section id="main-content">
-        <article class="about-page">
-            <div class="content-wrapper">
-                <h1>Meet the Creator</h1>
-                <div class="about-page-content">
-                    <aside>
-                        <img src="img/emmy-headshot.png" alt="Headshot of Emmy" />
-                        <h2>Emery Jordan [she/they]
-                            <span>is a writer and multi-disciplinary artist from the chicagoland area. she makes collages, poetry, illustrations, and sequential art about lesbian/dyke culture, afro-futurism and mental health. their work explores themes of Black culture, queer/lesbian identity, mental health, and spirituality. after viewing her work, think about the intersections of technology, identity, and culture in your own life.</span>
-                        </h2>
-                    </aside>
-                    <p>Brief description?</p>
-                    <div class="about-page-social-media">
-                            <i class="fab fa-instagram-square fa-2x"></i>
-                            <i class="fab fa-twitter-square fa-2x"></i>
-                            <i class="fas fa-coffee fa-2x"></i>
-                            <i class="fas fa-palette fa-2x"></i>
-                        </div>
-                </div>
-            </div>
-        </article>
-        <aside class="sidebar">
-          <div class="content-wrapper">
-            <div class="sidebar-about sidebar-section">
-              <h1 class="sidebar-logo-span">emery<span>.</span>studio
-                <span>is a glance into my life as a multidisciplinary artist, exploring</span>
-                <span>the intersection of technology and art.</span>
-              </h1>
-              <div class="sidebar-social-media">
-                <a href="https://twitter.com/theedykeagenda" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a>
-                <a href="https://instagram.com/dykeagenda/" target="_blank"><i class="fab fa-instagram-square fa-2x"></i></a>
-                <a href="https://emery.studio/" target="_blank"><i class="fas fa-palette fa-2x"></i></a>
-                <a href="https://ko-fi.com/" target="_blank"><i class="fas fa-mug-hot fa-2x"></i></a>
-              </div>
-            </div>
-            <div class="sidebar-browse-topic sidebar-section">
-              <h2>Browse By Topic</h2>
-              <a href="#">Crochet</a>
-              <a href="#">Coding</a>
-              <a href="#">Web Development</a>
-              <a href="#">Tutorials & Patterns</a>
-            </div>
-            <div class="sidebar-latest-posts sidebar-section">
-              <h2>The Latest Posts</h2>
-              <div class="sidebar-latest-posts-lists">
-                <a href="#">Light Up Crochet Sweater Pattern Using Adafruit Circuit Playground Express | Free Pattern</a>
-                <a href="#">How to Make A Light Up Amigurumi Octopus With Throughole LEDs | Free Tutorial</a>
-                <a href="#">What I've Learned After 1 Year of Being A Self-Taught Developer</a>
-              </div>
-            </div>
-            <div class="sidebar-search sidebar-section">
-              <h2>Search</h2>
-              <form>
-                <input type="text" placeholder="search"></input>
-                <button type="submit"><i class="fas fa-search"></i></button>
-              </form>
-            </div>
-            <div class="sidebar-newsletter sidebar-section">
-              <h2>Newsletter</h2>
-              <h3>Be the first to know
-                <span>about new posts!</span></h3>
-              <form>
-                <input type="text" placeholder="name@email.com"></input>
-                <input type="submit" value="Subscribe" class="newsletter-button"></input>
-              </form>
+      <article class="about-page">
+        <div class="content-wrapper">
+          <h1>Meet the Creator</h1>
+          <div class="about-page-content">
+            <aside>
+              <img src="img/emmy-headshot.png" alt="Headshot of Emmy" />
+              <h2>Emery Jordan [she/they]
+                <span>is a writer and multi-disciplinary artist from the chicagoland area. she makes collages, poetry,
+                  illustrations, and sequential art about lesbian/dyke culture, afro-futurism and mental health. their
+                  work explores themes of Black culture, queer/lesbian identity, mental health, and spirituality. after
+                  viewing her work, think about the intersections of technology, identity, and culture in your own
+                  life.</span>
+              </h2>
+            </aside>
+            <p>Brief description?</p>
+            <div class="about-page-social-media">
+              <i class="fab fa-instagram-square fa-2x"></i>
+              <i class="fab fa-twitter-square fa-2x"></i>
+              <i class="fas fa-coffee fa-2x"></i>
+              <i class="fas fa-palette fa-2x"></i>
             </div>
           </div>
-        </aside>
-      </section>
+        </div>
+      </article>
+      <aside class="sidebar">
+        <div class="content-wrapper">
+          <div class="sidebar-about sidebar-section">
+            <h1 class="sidebar-logo-span">emery<span>.</span>studio
+              <span>is a glance into my life as a multidisciplinary artist, exploring</span>
+              <span>the intersection of technology and art.</span>
+            </h1>
+            <div class="sidebar-social-media">
+              <a href="https://twitter.com/theedykeagenda" target="_blank"><i
+                  class="fab fa-twitter-square fa-2x"></i></a>
+              <a href="https://instagram.com/dykeagenda/" target="_blank"><i
+                  class="fab fa-instagram-square fa-2x"></i></a>
+              <a href="https://emery.studio/" target="_blank"><i class="fas fa-palette fa-2x"></i></a>
+              <a href="https://ko-fi.com/" target="_blank"><i class="fas fa-mug-hot fa-2x"></i></a>
+            </div>
+          </div>
+          <div class="sidebar-browse-topic sidebar-section">
+            <h2>Browse By Topic</h2>
+            <a href="#">Crochet</a>
+            <a href="#">Coding</a>
+            <a href="#">Web Development</a>
+            <a href="#">Tutorials & Patterns</a>
+          </div>
+          <div class="sidebar-latest-posts sidebar-section">
+            <h2>The Latest Posts</h2>
+            <div class="sidebar-latest-posts-lists">
+              <a href="#">Light Up Crochet Sweater Pattern Using Adafruit Circuit Playground Express | Free Pattern</a>
+              <a href="#">How to Make A Light Up Amigurumi Octopus With Throughole LEDs | Free Tutorial</a>
+              <a href="#">What I've Learned After 1 Year of Being A Self-Taught Developer</a>
+            </div>
+          </div>
+          <div class="sidebar-search sidebar-section">
+            <h2>Search</h2>
+            <form>
+              <input type="text" placeholder="search"></input>
+              <button type="submit"><i class="fas fa-search"></i></button>
+            </form>
+          </div>
+          <div class="sidebar-newsletter sidebar-section">
+            <h2>Newsletter</h2>
+            <h3>Be the first to know
+              <span>about new posts!</span></h3>
+            <form>
+              <input type="text" placeholder="name@email.com"></input>
+              <input type="submit" value="Subscribe" class="newsletter-button"></input>
+            </form>
+          </div>
+        </div>
+      </aside>
+    </section>
   </main>
   <footer>
     <div class="content-wrapper">
@@ -138,4 +145,5 @@
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
 </body>
+
 </html>
