--- a/coming-soon.html
+++ b/coming-soon.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>emery.studio //</title>
+  <title>emery.studio // is coming soon</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="manifest" href="site.webmanifest">
@@ -36,13 +36,6 @@
   <header>
     <div class="content-wrapper">
       <i class="fas fa-code fa-2x"></i>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="blog.html">Blog</a></li>
-        </ul>
-      </nav>
     </div>
   </header>
   <main>
@@ -51,25 +44,15 @@
         <h1 class="hero-logo-span">emery<span>.</span>studio</h1>
       </div>
     </section>
-    <section id="hub-selection">
-      <div class="content-wrapper">
-        <h2>Choose A <span>Hub</span></h2>
-        <article class="hub-container">
-          <div id="hub-one" class="hub-link-container">
-            <a href="hub-index.html">Crochet Tech</a>
-            <span id="hub-description">
-              Exploring the intersections of art & technology via e-textiles, amigurumi, & wearable tech.
-            </span>
-          </div>
-          <div id="hub-one" class="hub-link-container">
-            <a href="hub-index.html">Web Development</a>
-            <span id="hub-description">
-              Blogging about front-end development, learning Python & tutorials // <a href="/dev-portfolio"
-                class="portfolio-link">portfolio</a>
-            </span>
-          </div>
-        </article>
-      </div>
+    <section id="coming-soon-page">
+        <aside class="intro-text">
+            <h1>Hi!</h1>
+            <h1>I'm <span>Emery.</span></h1>
+            <h2>I'm a <span>web developer</span> and <span>multi-disciplinary artist.</span></h2>
+            This studio space will document my projects and journey as I explore
+        the intersections of technology, art, and identity.
+
+        </aside>
     </section>
   </main>
   <footer>
