--- a/blog.html
+++ b/blog.html
@@ -12,27 +12,27 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/main.scss">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;700;900&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/33391c5587.js" crossorigin="anonymous"></script>
-    <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/manifest.json">
-<meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-<meta name="theme-color" content="#ffffff">
+  <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;700;900&display=swap"
+    rel="stylesheet">
+  <script src="https://kit.fontawesome.com/33391c5587.js" crossorigin="anonymous"></script>
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -61,58 +61,97 @@
             <h3 class="blog-post-metadata">Posted on December 01, 2020 by <span>Emmy</span></h3>
             <img src="img/the-bad-tweet.png" class="no-image-crop" alt="Filler Image" />
             <p class="photo-credit">Image Courtesy of Twitter User: @paulsonperiodt</p>
-              <h3>Gentefied, The Half Of It, Killing Eve, High Fidelity, L Word: Gen Q - All need pics to add to list</h3>
-              Non quam lacus suspendisse faucibus interdum posuere lorem ipsum dolor. Lectus magna fringilla urna porttitor rhoncus dolor. Sagittis id consectetur purus ut faucibus pulvinar elementum integer. Dapibus ultrices in iaculis nunc sed augue. Sollicitudin ac orci phasellus egestas. Dictum varius duis at consectetur lorem donec. Sed adipiscing diam donec adipiscing tristique risus nec. Faucibus scelerisque eleifend donec pretium. Eget nullam non nisi est. Odio facilisis mauris sit amet massa vitae tortor. Purus in massa tempor nec feugiat nisl pretium fusce id. Consectetur purus ut faucibus pulvinar elementum integer enim neque. Mauris nunc congue nisi vitae suscipit.
+            <h3>Gentefied, The Half Of It, Killing Eve, High Fidelity, L Word: Gen Q - All need pics to add to list</h3>
+            Non quam lacus suspendisse faucibus interdum posuere lorem ipsum dolor. Lectus magna fringilla urna
+            porttitor rhoncus dolor. Sagittis id consectetur purus ut faucibus pulvinar elementum integer. Dapibus
+            ultrices in iaculis nunc sed augue. Sollicitudin ac orci phasellus egestas. Dictum varius duis at
+            consectetur lorem donec. Sed adipiscing diam donec adipiscing tristique risus nec. Faucibus scelerisque
+            eleifend donec pretium. Eget nullam non nisi est. Odio facilisis mauris sit amet massa vitae tortor. Purus
+            in massa tempor nec feugiat nisl pretium fusce id. Consectetur purus ut faucibus pulvinar elementum integer
+            enim neque. Mauris nunc congue nisi vitae suscipit.
             <br>
-              <img src="img/little-fires-everywhere.png" alt="Filler Image" />
+            <img src="img/little-fires-everywhere.png" alt="Filler Image" />
             <p class="photo-credit">Image Courtesy of Hulu</p>
-              <h3>Little Fires Everywhere</h3>
-              <p>
+            <h3>Little Fires Everywhere</h3>
+            <p>
               Massa placerat duis ultricies lacus sed. Consequat id porta nibh venenatis.
             </p>
             <img src="img/vida-filler-01.png" alt="Filler Image" />
             <p class="photo-credit">Image Courtesy of Starz</p>
-              <h3>Vida</h3>
-              <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            <h3>Vida</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua.
             </p>
             <img src="img/gen-q-filler-01.png" alt="Filler Image" />
             <p class="photo-credit">Image Courtesy of Showtime</p>
-              <h3>The L Word: Generation Q</h3>
-              <p>
-              Placerat vestibulum lectus mauris ultrices eros in. Pharetra diam sit amet nisl suscipit adipiscing bibendum est ultricies.
+            <h3>The L Word: Generation Q</h3>
+            <p>
+              Placerat vestibulum lectus mauris ultrices eros in. Pharetra diam sit amet nisl suscipit adipiscing
+              bibendum est ultricies.
             </p>
             <img src="img/hightown-filler-01.png" alt="Filler Image" />
             <p class="photo-credit">Image Courtesy of Such and Such</p>
-              <h3>Hightown</h3>
-              <p>
+            <h3>Hightown</h3>
+            <p>
               Massa placerat duis ultricies lacus sed. Consequat id porta nibh venenatis.
             </p>
           </article>
           <hr>
           <article class="blog-single-post">
             <h1>Euphoria's Special Episode: Part 1 Was An Affirmation From My Ancestors That I'll Never Receive IRL</h1>
-          <h3 class="blog-post-metadata">Posted on December 01, 2020 by <span class="blog-post-author">Emmy</span></h3>
-          <img src="img/euphoria-filler-01.jpg" alt="Filler Image" />
-          <p class="photo-credit">Image Courtesy of Such and Such</p>
+            <h3 class="blog-post-metadata">Posted on December 01, 2020 by <span class="blog-post-author">Emmy</span>
+            </h3>
+            <img src="img/euphoria-filler-01.jpg" alt="Filler Image" />
+            <p class="photo-credit">Image Courtesy of Such and Such</p>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Placerat vestibulum lectus mauris ultrices eros in. Pharetra diam sit amet nisl suscipit adipiscing bibendum est ultricies. Massa placerat duis ultricies lacus sed. Consequat id porta nibh venenatis. Dictum sit amet justo donec enim diam vulputate ut. Varius sit amet mattis vulputate enim nulla aliquet porttitor lacus. Nec ullamcorper sit amet risus nullam. Netus et malesuada fames ac turpis egestas integer eget. Laoreet suspendisse interdum consectetur libero id faucibus nisl tincidunt eget. Venenatis tellus in metus vulputate eu scelerisque felis imperdiet proin. Sed felis eget velit aliquet sagittis id. Amet consectetur adipiscing elit ut aliquam purus sit. Lectus arcu bibendum at varius vel. Consequat mauris nunc congue nisi vitae suscipit tellus mauris a. Urna condimentum mattis pellentesque id. Quis risus sed vulputate odio ut enim. Eget nulla facilisi etiam dignissim diam quis enim lobortis. Est ullamcorper eget nulla facilisi etiam dignissim diam quis.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Placerat vestibulum lectus mauris ultrices eros in. Pharetra diam sit amet nisl
+              suscipit adipiscing bibendum est ultricies. Massa placerat duis ultricies lacus sed. Consequat id porta
+              nibh venenatis. Dictum sit amet justo donec enim diam vulputate ut. Varius sit amet mattis vulputate enim
+              nulla aliquet porttitor lacus. Nec ullamcorper sit amet risus nullam. Netus et malesuada fames ac turpis
+              egestas integer eget. Laoreet suspendisse interdum consectetur libero id faucibus nisl tincidunt eget.
+              Venenatis tellus in metus vulputate eu scelerisque felis imperdiet proin. Sed felis eget velit aliquet
+              sagittis id. Amet consectetur adipiscing elit ut aliquam purus sit. Lectus arcu bibendum at varius vel.
+              Consequat mauris nunc congue nisi vitae suscipit tellus mauris a. Urna condimentum mattis pellentesque id.
+              Quis risus sed vulputate odio ut enim. Eget nulla facilisi etiam dignissim diam quis enim lobortis. Est
+              ullamcorper eget nulla facilisi etiam dignissim diam quis.
             </p>
             <p>
-              Amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar. Adipiscing elit ut aliquam purus sit amet luctus venenatis lectus. Cursus turpis massa tincidunt dui ut ornare. Nibh sit amet commodo nulla. Purus semper eget duis at tellus. Tincidunt eget nullam non nisi est sit amet. Sed libero enim sed faucibus. Blandit libero volutpat sed cras ornare. Orci phasellus egestas tellus rutrum tellus pellentesque. Enim blandit volutpat maecenas volutpat blandit aliquam etiam erat velit. Cum sociis natoque penatibus et magnis dis. Molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit sed. Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi.
+              Amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar. Adipiscing elit ut aliquam purus sit
+              amet luctus venenatis lectus. Cursus turpis massa tincidunt dui ut ornare. Nibh sit amet commodo nulla.
+              Purus semper eget duis at tellus. Tincidunt eget nullam non nisi est sit amet. Sed libero enim sed
+              faucibus. Blandit libero volutpat sed cras ornare. Orci phasellus egestas tellus rutrum tellus
+              pellentesque. Enim blandit volutpat maecenas volutpat blandit aliquam etiam erat velit. Cum sociis natoque
+              penatibus et magnis dis. Molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit sed. Dolor sit
+              amet consectetur adipiscing elit pellentesque habitant morbi.
             </p>
           </article>
           <hr>
           <article class="blog-single-post">
             <h1>Happiest Season Was So Bad That It Was Good, But Then It Got Bad Again</h1>
-            <h3 class="blog-post-metadata">Posted on December 01, 2020 by <span class="blog-post-author">Emmy</span></h3>
+            <h3 class="blog-post-metadata">Posted on December 01, 2020 by <span class="blog-post-author">Emmy</span>
+            </h3>
             <img src="img/happiest-season-filler-01.jpg" alt="Filler Image" />
             <p class="photo-credit">Image Courtesy of Such and Such</p>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed tempus urna et pharetra pharetra massa massa ultricies. Quis commodo odio aenean sed adipiscing diam donec adipiscing. Semper risus in hendrerit gravida rutrum quisque. Eget felis eget nunc lobortis. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Venenatis urna cursus eget nunc. Neque convallis a cras semper auctor neque. Morbi tincidunt augue interdum velit. Sit amet volutpat consequat mauris nunc congue nisi vitae. Aliquet risus feugiat in ante metus dictum at tempor commodo. Lacinia quis vel eros donec ac. Id porta nibh venenatis cras.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Sed tempus urna et pharetra pharetra massa massa ultricies. Quis commodo odio aenean
+              sed adipiscing diam donec adipiscing. Semper risus in hendrerit gravida rutrum quisque. Eget felis eget
+              nunc lobortis. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Venenatis urna cursus eget
+              nunc. Neque convallis a cras semper auctor neque. Morbi tincidunt augue interdum velit. Sit amet volutpat
+              consequat mauris nunc congue nisi vitae. Aliquet risus feugiat in ante metus dictum at tempor commodo.
+              Lacinia quis vel eros donec ac. Id porta nibh venenatis cras.
             </p>
             <p>
-              Nibh mauris cursus mattis molestie a iaculis at erat. Blandit volutpat maecenas volutpat blandit aliquam etiam. Turpis massa tincidunt dui ut ornare lectus sit. Accumsan in nisl nisi scelerisque eu ultrices vitae auctor eu. Eget aliquet nibh praesent tristique. Urna cursus eget nunc scelerisque viverra mauris. Ut aliquam purus sit amet luctus. Ut diam quam nulla porttitor massa id neque aliquam. Montes nascetur ridiculus mus mauris vitae ultricies. Ac feugiat sed lectus vestibulum mattis ullamcorper velit sed. Venenatis cras sed felis eget velit aliquet. Dui sapien eget mi proin sed libero enim. Euismod elementum nisi quis eleifend. Mauris a diam maecenas sed enim ut sem viverra aliquet. Nec nam aliquam sem et tortor. Facilisis volutpat est velit egestas dui id ornare arcu odio.
+              Nibh mauris cursus mattis molestie a iaculis at erat. Blandit volutpat maecenas volutpat blandit aliquam
+              etiam. Turpis massa tincidunt dui ut ornare lectus sit. Accumsan in nisl nisi scelerisque eu ultrices
+              vitae auctor eu. Eget aliquet nibh praesent tristique. Urna cursus eget nunc scelerisque viverra mauris.
+              Ut aliquam purus sit amet luctus. Ut diam quam nulla porttitor massa id neque aliquam. Montes nascetur
+              ridiculus mus mauris vitae ultricies. Ac feugiat sed lectus vestibulum mattis ullamcorper velit sed.
+              Venenatis cras sed felis eget velit aliquet. Dui sapien eget mi proin sed libero enim. Euismod elementum
+              nisi quis eleifend. Mauris a diam maecenas sed enim ut sem viverra aliquet. Nec nam aliquam sem et tortor.
+              Facilisis volutpat est velit egestas dui id ornare arcu odio.
             </p>
           </article>
         </div>
@@ -125,8 +164,10 @@
               <span>the intersection of technology and art.</span>
             </h1>
             <div class="sidebar-social-media">
-              <a href="https://twitter.com/theedykeagenda" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a>
-              <a href="https://instagram.com/dykeagenda/" target="_blank"><i class="fab fa-instagram-square fa-2x"></i></a>
+              <a href="https://twitter.com/theedykeagenda" target="_blank"><i
+                  class="fab fa-twitter-square fa-2x"></i></a>
+              <a href="https://instagram.com/dykeagenda/" target="_blank"><i
+                  class="fab fa-instagram-square fa-2x"></i></a>
               <a href="https://emery.studio/" target="_blank"><i class="fas fa-palette fa-2x"></i></a>
               <a href="https://ko-fi.com/" target="_blank"><i class="fas fa-mug-hot fa-2x"></i></a>
             </div>
@@ -183,4 +224,5 @@
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
 </body>
+
 </html>
