--- a/hub-index.html
+++ b/hub-index.html
@@ -12,24 +12,24 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/main.scss">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;700;900&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/33391c5587.js" crossorigin="anonymous"></script>
-    <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-<link rel="manifest" href="/manifest.json">
-<meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-<meta name="theme-color" content="#ffffff">
+  <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;700;900&display=swap"
+    rel="stylesheet">
+  <script src="https://kit.fontawesome.com/33391c5587.js" crossorigin="anonymous"></script>
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -42,6 +42,7 @@
           <li><a href="about.html">About</a></li>
           <li><a href="blog.html">Blog</a></li>
         </ul>
+      </nav>
     </div>
   </header>
   <main>
@@ -61,48 +62,57 @@
               <h3 class="blog-post-metadata">Posted on December 01, 2020 by <span>Emmy</span></h3>
               <img src="img/little-fires-everywhere.png" alt="Filler Image" />
               <p class="blog-post-excerpt">
-                Non quam lacus suspendisse faucibus interdum posuere lorem ipsum dolor. Lectus magna fringilla urna porttitor rhoncus dolor. Sagittis id consectetur purus ut faucibus pulvinar elementum integer.
+                Non quam lacus suspendisse faucibus interdum posuere lorem ipsum dolor. Lectus magna fringilla urna
+                porttitor rhoncus dolor. Sagittis id consectetur purus ut faucibus pulvinar elementum integer.
               </p>
             </article>
           </div>
           <div class="blog-single-post-gradient-wrapper">
             <article class="blog-single-post">
               <h1>How to Make A Light Up Amigurumi Octopus With Throughole LEDs | Free Tutorial</h1>
-            <h3 class="blog-post-metadata">Posted on December 01, 2020 by <span class="blog-post-author">Emmy</span></h3>
-            <img src="img/euphoria-filler-01.jpg" alt="Filler Image" />
-            <p class="blog-post-excerpt">
-              Non quam lacus suspendisse faucibus interdum posuere lorem ipsum dolor. Lectus magna fringilla urna porttitor rhoncus dolor. Sagittis id consectetur purus ut faucibus pulvinar elementum integer.
-            </p>
+              <h3 class="blog-post-metadata">Posted on December 01, 2020 by <span class="blog-post-author">Emmy</span>
+              </h3>
+              <img src="img/euphoria-filler-01.jpg" alt="Filler Image" />
+              <p class="blog-post-excerpt">
+                Non quam lacus suspendisse faucibus interdum posuere lorem ipsum dolor. Lectus magna fringilla urna
+                porttitor rhoncus dolor. Sagittis id consectetur purus ut faucibus pulvinar elementum integer.
+              </p>
             </article>
           </div>
           <div class="blog-single-post-gradient-wrapper">
             <article class="blog-single-post">
               <h1>What I've Learned After 1 Year of Being A Self-Taught Developer</h1>
-              <h3 class="blog-post-metadata">Posted on December 01, 2020 by <span class="blog-post-author">Emmy</span></h3>
+              <h3 class="blog-post-metadata">Posted on December 01, 2020 by <span class="blog-post-author">Emmy</span>
+              </h3>
               <img src="img/happiest-season-filler-01.jpg" alt="Filler Image" />
               <p class="blog-post-excerpt">
-                Non quam lacus suspendisse faucibus interdum posuere lorem ipsum dolor. Lectus magna fringilla urna porttitor rhoncus dolor. Sagittis id consectetur purus ut faucibus pulvinar elementum integer.
-            </p>
+                Non quam lacus suspendisse faucibus interdum posuere lorem ipsum dolor. Lectus magna fringilla urna
+                porttitor rhoncus dolor. Sagittis id consectetur purus ut faucibus pulvinar elementum integer.
+              </p>
             </article>
           </div>
           <div class="blog-single-post-gradient-wrapper">
             <article class="blog-single-post">
               <h1>When In Doubt: display: flex; It Out! | A Free Flexbox Tutorial</h1>
-              <h3 class="blog-post-metadata">Posted on December 01, 2020 by <span class="blog-post-author">Emmy</span></h3>
+              <h3 class="blog-post-metadata">Posted on December 01, 2020 by <span class="blog-post-author">Emmy</span>
+              </h3>
               <img src="img/happiest-season-filler-01.jpg" alt="Filler Image" />
               <p class="blog-post-excerpt">
-                Non quam lacus suspendisse faucibus interdum posuere lorem ipsum dolor. Lectus magna fringilla urna porttitor rhoncus dolor. Sagittis id consectetur purus ut faucibus pulvinar elementum integer.
-            </p>
+                Non quam lacus suspendisse faucibus interdum posuere lorem ipsum dolor. Lectus magna fringilla urna
+                porttitor rhoncus dolor. Sagittis id consectetur purus ut faucibus pulvinar elementum integer.
+              </p>
             </article>
           </div>
           <div class="blog-single-post-gradient-wrapper">
             <article class="blog-single-post">
               <h1>My Favorite Granny Square Patterns</h1>
-            <h3 class="blog-post-metadata">Posted on December 01, 2020 by <span class="blog-post-author">Emmy</span></h3>
-            <img src="img/euphoria-filler-01.jpg" alt="Filler Image" />
-            <p class="blog-post-excerpt">
-              Non quam lacus suspendisse faucibus interdum posuere lorem ipsum dolor. Lectus magna fringilla urna porttitor rhoncus dolor. Sagittis id consectetur purus ut faucibus pulvinar elementum integer.
-            </p>
+              <h3 class="blog-post-metadata">Posted on December 01, 2020 by <span class="blog-post-author">Emmy</span>
+              </h3>
+              <img src="img/euphoria-filler-01.jpg" alt="Filler Image" />
+              <p class="blog-post-excerpt">
+                Non quam lacus suspendisse faucibus interdum posuere lorem ipsum dolor. Lectus magna fringilla urna
+                porttitor rhoncus dolor. Sagittis id consectetur purus ut faucibus pulvinar elementum integer.
+              </p>
             </article>
           </div>
         </div>
@@ -112,11 +122,14 @@
           <div class="sidebar-about sidebar-section">
             <h1 class="sidebar-logo-span">emery<span>.</span>studio
               <span>is a glance into my life as a multidisciplinary artist and web developer who is interested in</span>
-              <span>exploring the intersections of technology and art. <a href="about.html">Learn More &#8250;</a></span>
+              <span>exploring the intersections of technology and art. <a href="about.html">Learn More
+                  &#8250;</a></span>
             </h1>
             <div class="sidebar-social-media">
-              <a href="https://twitter.com/theedykeagenda" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a>
-              <a href="https://instagram.com/dykeagenda/" target="_blank"><i class="fab fa-instagram-square fa-2x"></i></a>
+              <a href="https://twitter.com/theedykeagenda" target="_blank"><i
+                  class="fab fa-twitter-square fa-2x"></i></a>
+              <a href="https://instagram.com/dykeagenda/" target="_blank"><i
+                  class="fab fa-instagram-square fa-2x"></i></a>
               <a href="https://emery.studio/" target="_blank"><i class="fas fa-palette fa-2x"></i></a>
               <a href="https://ko-fi.com/" target="_blank"><i class="fas fa-mug-hot fa-2x"></i></a>
             </div>
@@ -172,4 +185,5 @@
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
 </body>
+
 </html>
