--- a/coming-soon.html
+++ b/coming-soon.html
@@ -46,7 +46,7 @@
     </section>
     <section id="coming-soon-page">
         <aside class="intro-text">
-            <h1>Hi!</h1>
+            <h1><span>H</span><span>i</span><span>!</span></h1>
             <h1>I'm <span>Emery.</span></h1>
             <h2>I'm a <span>web developer</span> and <span>multi-disciplinary artist.</span></h2>
             This studio space will document my projects and journey as I explore
