--- a/coming-soon.html
+++ b/coming-soon.html
@@ -46,8 +46,9 @@
     </section>
     <section id="coming-soon-page">
         <aside class="intro-text">
-            <h1><span>H</span><span>i</span><span>!</span></h1>
-            <h1>I'm <span>Emery.</span></h1>
+            <h1>
+              <span>H</span><span>i</span><span>!</span></h1>
+            <h1><span>I</span><span>'</span>m <span>Emery.</span></h1>
             <h2>I'm a <span>web developer</span> and <span>multi-disciplinary artist.</span></h2>
             This studio space will document my projects and journey as I explore
         the intersections of technology, art, and identity.
