Added basic formatting & styles for crochet pattern posts

--- a/crochet-hub-pattern-post.html
+++ b/crochet-hub-pattern-post.html
@@ -54,106 +54,46 @@
       </div>
     </section>
     <section id="main-content">
-      <div class="blog">
+      <div class="blog crochet-tech-hub">
         <div class="content-wrapper">
-          <article class="blog-single-post">
-            <h1>In Response To That One Really Bad Tweet: The Best Lesbian TV & Film Featuring BIPOC Of 2020</h1>
-            <h3 class="blog-post-metadata">Posted on December 01, 2020 by <span>Emmy</span></h3>
-            <img src="img/the-bad-tweet.png" class="no-image-crop" alt="Filler Image" />
-            <p class="photo-credit">Image Courtesy of Twitter User: @paulsonperiodt</p>
-            <h3>Gentefied, The Half Of It, Killing Eve, High Fidelity, L Word: Gen Q - All need pics to add to list</h3>
-            Non quam lacus suspendisse faucibus interdum posuere lorem ipsum dolor. Lectus magna fringilla urna
-            porttitor rhoncus dolor. Sagittis id consectetur purus ut faucibus pulvinar elementum integer. Dapibus
-            ultrices in iaculis nunc sed augue. Sollicitudin ac orci phasellus egestas. Dictum varius duis at
-            consectetur lorem donec. Sed adipiscing diam donec adipiscing tristique risus nec. Faucibus scelerisque
-            eleifend donec pretium. Eget nullam non nisi est. Odio facilisis mauris sit amet massa vitae tortor. Purus
-            in massa tempor nec feugiat nisl pretium fusce id. Consectetur purus ut faucibus pulvinar elementum integer
-            enim neque. Mauris nunc congue nisi vitae suscipit.
-            <br>
-            <img src="img/little-fires-everywhere.png" alt="Filler Image" />
-            <p class="photo-credit">Image Courtesy of Hulu</p>
-            <h3>Little Fires Everywhere</h3>
-            <p>
-              Massa placerat duis ultricies lacus sed. Consequat id porta nibh venenatis.
-            </p>
-            <img src="img/vida-filler-01.png" alt="Filler Image" />
-            <p class="photo-credit">Image Courtesy of Starz</p>
-            <h3>Vida</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua.
-            </p>
-            <img src="img/gen-q-filler-01.png" alt="Filler Image" />
-            <p class="photo-credit">Image Courtesy of Showtime</p>
-            <h3>The L Word: Generation Q</h3>
-            <p>
-              Placerat vestibulum lectus mauris ultrices eros in. Pharetra diam sit amet nisl suscipit adipiscing
-              bibendum est ultricies.
-            </p>
-            <img src="img/hightown-filler-01.png" alt="Filler Image" />
-            <p class="photo-credit">Image Courtesy of Such and Such</p>
-            <h3>Hightown</h3>
-            <p>
-              Massa placerat duis ultricies lacus sed. Consequat id porta nibh venenatis.
-            </p>
-          </article>
+            <article class="blog-single-post">
+                <h1>JW Anderson Inspired, Light Up Crochet Cardigan | Free Pattern & Turotial</h1>
+                <h3 class="blog-post-metadata">Posted on December 01, 2020 by <span>Emmy</span></h3>
+                <img src="img/crochet-pattern-filler.jpg" alt="Filler Image" />
+                <p class="photo-credit">Image Courtesy of Pexels</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ipsum a arcu cursus vitae congue mauris rhoncus aenean. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus. Ipsum dolor sit amet consectetur. Ullamcorper eget nulla facilisi etiam. Duis at consectetur lorem donec massa sapien faucibus. Viverra maecenas accumsan lacus vel facilisis volutpat est velit egestas. Feugiat sed lectus vestibulum mattis. Non sodales neque sodales ut etiam. Massa enim nec dui nunc mattis enim ut tellus. Faucibus turpis in eu mi bibendum neque egestas congue. Natoque penatibus et magnis dis. Mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus. Blandit libero volutpat sed cras ornare arcu. At quis risus sed vulputate odio ut enim. Natoque penatibus et magnis dis parturient montes nascetur. Mattis pellentesque id nibh tortor id aliquet.</p>
+                <p>Ornare massa eget egestas purus viverra accumsan in nisl nisi. Lacus sed viverra tellus in hac habitasse platea dictumst. Egestas integer eget aliquet nibh praesent tristique magna sit amet. Ac turpis egestas maecenas pharetra convallis posuere morbi leo. Pellentesque elit eget gravida cum sociis natoque penatibus et magnis. Ultrices vitae auctor eu augue. Turpis tincidunt id aliquet risus feugiat. Nulla facilisi etiam dignissim diam quis. Placerat orci nulla pellentesque dignissim enim sit amet venenatis urna. Aliquam etiam erat velit scelerisque in dictum. Eget magna fermentum iaculis eu non diam. Sit amet justo donec enim diam vulputate. Amet nulla facilisi morbi tempus iaculis. Dictum varius duis at consectetur lorem.</p>
+                <div id="materials">
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet</li>
+                        <li>consectetur adipiscing elit</li>
+                        <li>sed do eiusmod tempor incididunt</li>
+                        <li>ut labore et dolore magna aliqua.</li>
+                        <li>Vitae elementum curabitur vitae nunc sed.</li>
+                        <li>Viverra ipsum nunc aliquet bibendum enim</li>
+                    </ul>
+                </div>
+                <div id="circuit-diagram">
+                    <img src="img/euphoria-filler-01.jpg" />
+                </div>
+                <div id="sweater-pattern">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae elementum curabitur vitae nunc sed. Viverra ipsum nunc aliquet bibendum enim facilisis gravida neque. Est ante in nibh mauris cursus mattis molestie. Urna nec tincidunt praesent semper feugiat nibh sed pulvinar proin. Quisque sagittis purus sit amet volutpat. Ut eu sem integer vitae. Nunc pulvinar sapien et ligula. At tellus at urna condimentum mattis pellentesque id. Gravida neque convallis a cras semper. Eget velit aliquet sagittis id consectetur purus ut faucibus. Eu scelerisque felis imperdiet proin fermentum leo vel orci porta. Venenatis tellus in metus vulputate eu scelerisque felis imperdiet. Habitant morbi tristique senectus et. Lobortis scelerisque fermentum dui faucibus in ornare quam. Praesent elementum facilisis leo vel fringilla est ullamcorper eget nulla. Elit ut aliquam purus sit amet luctus.</p>
+                    <p>Venenatis urna cursus eget nunc scelerisque. Volutpat blandit aliquam etiam erat velit scelerisque in dictum non. Nec feugiat nisl pretium fusce id velit. Eleifend donec pretium vulputate sapien nec sagittis aliquam. Leo in vitae turpis massa sed elementum tempus egestas sed. Rhoncus aenean vel elit scelerisque mauris. Non curabitur gravida arcu ac tortor dignissim convallis aenean. Nunc mattis enim ut tellus elementum sagittis. Sed velit dignissim sodales ut eu sem integer vitae justo. Quis auctor elit sed vulputate mi sit amet mauris. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus.</p>
+                    <p>Senectus et netus et malesuada fames ac. Facilisis leo vel fringilla est ullamcorper eget nulla. Orci porta non pulvinar neque. Nec nam aliquam sem et. Laoreet id donec ultrices tincidunt arcu non sodales neque. Aliquet nec ullamcorper sit amet risus nullam eget. Vitae purus faucibus ornare suspendisse sed nisi lacus. Sed vulputate mi sit amet mauris commodo quis. Semper viverra nam libero justo laoreet sit amet cursus. At urna condimentum mattis pellentesque. Scelerisque felis imperdiet proin fermentum leo vel. Posuere morbi leo urna molestie. Tortor id aliquet lectus proin nibh nisl condimentum. Sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae nunc. Arcu odio ut sem nulla pharetra diam. Aliquam ut porttitor leo a diam sollicitudin. Fermentum posuere urna nec tincidunt praesent semper. Dui ut ornare lectus sit amet est.</p>
+                </div>
+                <div id="assembly">
+                    <img src="img/euphoria-filler-01.jpg" />
+                    <img src="img/little-fires-everywhere.png" />
+                </div>
+                <aside class="pattern-section-jump">
+                    <h2>Jump to:</h2>
+                    <button><a href="#materials">Materials</a></button>
+                    <button><a href="#circuit-diagram">Circuit Diagram</a></button>
+                    <button><a href="#sweater-pattern">Sweater Pattern</a></button>
+                    <button><a href="#assembly">Assembly</a></button>
+                </aside>
+            </article>
           <hr>
-          <article class="blog-single-post">
-            <h1>Euphoria's Special Episode: Part 1 Was An Affirmation From My Ancestors That I'll Never Receive IRL</h1>
-            <h3 class="blog-post-metadata">Posted on December 01, 2020 by <span class="blog-post-author">Emmy</span>
-            </h3>
-            <img src="img/euphoria-filler-01.jpg" alt="Filler Image" />
-            <p class="photo-credit">Image Courtesy of Such and Such</p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Placerat vestibulum lectus mauris ultrices eros in. Pharetra diam sit amet nisl
-              suscipit adipiscing bibendum est ultricies. Massa placerat duis ultricies lacus sed. Consequat id porta
-              nibh venenatis. Dictum sit amet justo donec enim diam vulputate ut. Varius sit amet mattis vulputate enim
-              nulla aliquet porttitor lacus. Nec ullamcorper sit amet risus nullam. Netus et malesuada fames ac turpis
-              egestas integer eget. Laoreet suspendisse interdum consectetur libero id faucibus nisl tincidunt eget.
-              Venenatis tellus in metus vulputate eu scelerisque felis imperdiet proin. Sed felis eget velit aliquet
-              sagittis id. Amet consectetur adipiscing elit ut aliquam purus sit. Lectus arcu bibendum at varius vel.
-              Consequat mauris nunc congue nisi vitae suscipit tellus mauris a. Urna condimentum mattis pellentesque id.
-              Quis risus sed vulputate odio ut enim. Eget nulla facilisi etiam dignissim diam quis enim lobortis. Est
-              ullamcorper eget nulla facilisi etiam dignissim diam quis.
-            </p>
-            <p>
-              Amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar. Adipiscing elit ut aliquam purus sit
-              amet luctus venenatis lectus. Cursus turpis massa tincidunt dui ut ornare. Nibh sit amet commodo nulla.
-              Purus semper eget duis at tellus. Tincidunt eget nullam non nisi est sit amet. Sed libero enim sed
-              faucibus. Blandit libero volutpat sed cras ornare. Orci phasellus egestas tellus rutrum tellus
-              pellentesque. Enim blandit volutpat maecenas volutpat blandit aliquam etiam erat velit. Cum sociis natoque
-              penatibus et magnis dis. Molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit sed. Dolor sit
-              amet consectetur adipiscing elit pellentesque habitant morbi.
-            </p>
-          </article>
-          <hr>
-          <article class="blog-single-post">
-            <h1>Happiest Season Was So Bad That It Was Good, But Then It Got Bad Again</h1>
-            <h3 class="blog-post-metadata">Posted on December 01, 2020 by <span class="blog-post-author">Emmy</span>
-            </h3>
-            <img src="img/happiest-season-filler-01.jpg" alt="Filler Image" />
-            <p class="photo-credit">Image Courtesy of Such and Such</p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Sed tempus urna et pharetra pharetra massa massa ultricies. Quis commodo odio aenean
-              sed adipiscing diam donec adipiscing. Semper risus in hendrerit gravida rutrum quisque. Eget felis eget
-              nunc lobortis. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Venenatis urna cursus eget
-              nunc. Neque convallis a cras semper auctor neque. Morbi tincidunt augue interdum velit. Sit amet volutpat
-              consequat mauris nunc congue nisi vitae. Aliquet risus feugiat in ante metus dictum at tempor commodo.
-              Lacinia quis vel eros donec ac. Id porta nibh venenatis cras.
-            </p>
-            <p>
-              Nibh mauris cursus mattis molestie a iaculis at erat. Blandit volutpat maecenas volutpat blandit aliquam
-              etiam. Turpis massa tincidunt dui ut ornare lectus sit. Accumsan in nisl nisi scelerisque eu ultrices
-              vitae auctor eu. Eget aliquet nibh praesent tristique. Urna cursus eget nunc scelerisque viverra mauris.
-              Ut aliquam purus sit amet luctus. Ut diam quam nulla porttitor massa id neque aliquam. Montes nascetur
-              ridiculus mus mauris vitae ultricies. Ac feugiat sed lectus vestibulum mattis ullamcorper velit sed.
-              Venenatis cras sed felis eget velit aliquet. Dui sapien eget mi proin sed libero enim. Euismod elementum
-              nisi quis eleifend. Mauris a diam maecenas sed enim ut sem viverra aliquet. Nec nam aliquam sem et tortor.
-              Facilisis volutpat est velit egestas dui id ornare arcu odio.
-            </p>
-          </article>
         </div>
       </div>
       <aside class="sidebar">
