Added functionality to 'pattern jump' options and smooth scroll to entire website

--- a/crochet-hub-pattern-post.html
+++ b/crochet-hub-pattern-post.html
@@ -59,11 +59,19 @@
             <article class="blog-single-post">
                 <h1>JW Anderson Inspired, Light Up Crochet Cardigan | Free Pattern & Turotial</h1>
                 <h3 class="blog-post-metadata">Posted on December 01, 2020 by <span>Emmy</span></h3>
+                <aside class="pattern-section-jump">
+                    <h2>Jump to:</h2>
+                    <button><a href="#materials">Materials</a></button>
+                    <button><a href="#circuit-diagram">Circuit Diagram</a></button>
+                    <button><a href="#pattern">Pattern</a></button>
+                    <button><a href="#assembly">Assembly</a></button>
+                </aside>
                 <img src="img/crochet-pattern-filler.jpg" alt="Filler Image" />
                 <p class="photo-credit">Image Courtesy of Pexels</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ipsum a arcu cursus vitae congue mauris rhoncus aenean. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus. Ipsum dolor sit amet consectetur. Ullamcorper eget nulla facilisi etiam. Duis at consectetur lorem donec massa sapien faucibus. Viverra maecenas accumsan lacus vel facilisis volutpat est velit egestas. Feugiat sed lectus vestibulum mattis. Non sodales neque sodales ut etiam. Massa enim nec dui nunc mattis enim ut tellus. Faucibus turpis in eu mi bibendum neque egestas congue. Natoque penatibus et magnis dis. Mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus. Blandit libero volutpat sed cras ornare arcu. At quis risus sed vulputate odio ut enim. Natoque penatibus et magnis dis parturient montes nascetur. Mattis pellentesque id nibh tortor id aliquet.</p>
                 <p>Ornare massa eget egestas purus viverra accumsan in nisl nisi. Lacus sed viverra tellus in hac habitasse platea dictumst. Egestas integer eget aliquet nibh praesent tristique magna sit amet. Ac turpis egestas maecenas pharetra convallis posuere morbi leo. Pellentesque elit eget gravida cum sociis natoque penatibus et magnis. Ultrices vitae auctor eu augue. Turpis tincidunt id aliquet risus feugiat. Nulla facilisi etiam dignissim diam quis. Placerat orci nulla pellentesque dignissim enim sit amet venenatis urna. Aliquam etiam erat velit scelerisque in dictum. Eget magna fermentum iaculis eu non diam. Sit amet justo donec enim diam vulputate. Amet nulla facilisi morbi tempus iaculis. Dictum varius duis at consectetur lorem.</p>
                 <div id="materials">
+                    <h2>Materials</h2>
                     <ul>
                         <li>Lorem ipsum dolor sit amet</li>
                         <li>consectetur adipiscing elit</li>
@@ -74,24 +82,22 @@
                     </ul>
                 </div>
                 <div id="circuit-diagram">
+                    <h2>Circuit Diagram</h2>
                     <img src="img/euphoria-filler-01.jpg" />
                 </div>
-                <div id="sweater-pattern">
+                <div id="pattern">
+                    <h2>Pattern</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae elementum curabitur vitae nunc sed. Viverra ipsum nunc aliquet bibendum enim facilisis gravida neque. Est ante in nibh mauris cursus mattis molestie. Urna nec tincidunt praesent semper feugiat nibh sed pulvinar proin. Quisque sagittis purus sit amet volutpat. Ut eu sem integer vitae. Nunc pulvinar sapien et ligula. At tellus at urna condimentum mattis pellentesque id. Gravida neque convallis a cras semper. Eget velit aliquet sagittis id consectetur purus ut faucibus. Eu scelerisque felis imperdiet proin fermentum leo vel orci porta. Venenatis tellus in metus vulputate eu scelerisque felis imperdiet. Habitant morbi tristique senectus et. Lobortis scelerisque fermentum dui faucibus in ornare quam. Praesent elementum facilisis leo vel fringilla est ullamcorper eget nulla. Elit ut aliquam purus sit amet luctus.</p>
                     <p>Venenatis urna cursus eget nunc scelerisque. Volutpat blandit aliquam etiam erat velit scelerisque in dictum non. Nec feugiat nisl pretium fusce id velit. Eleifend donec pretium vulputate sapien nec sagittis aliquam. Leo in vitae turpis massa sed elementum tempus egestas sed. Rhoncus aenean vel elit scelerisque mauris. Non curabitur gravida arcu ac tortor dignissim convallis aenean. Nunc mattis enim ut tellus elementum sagittis. Sed velit dignissim sodales ut eu sem integer vitae justo. Quis auctor elit sed vulputate mi sit amet mauris. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus.</p>
                     <p>Senectus et netus et malesuada fames ac. Facilisis leo vel fringilla est ullamcorper eget nulla. Orci porta non pulvinar neque. Nec nam aliquam sem et. Laoreet id donec ultrices tincidunt arcu non sodales neque. Aliquet nec ullamcorper sit amet risus nullam eget. Vitae purus faucibus ornare suspendisse sed nisi lacus. Sed vulputate mi sit amet mauris commodo quis. Semper viverra nam libero justo laoreet sit amet cursus. At urna condimentum mattis pellentesque. Scelerisque felis imperdiet proin fermentum leo vel. Posuere morbi leo urna molestie. Tortor id aliquet lectus proin nibh nisl condimentum. Sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae nunc. Arcu odio ut sem nulla pharetra diam. Aliquam ut porttitor leo a diam sollicitudin. Fermentum posuere urna nec tincidunt praesent semper. Dui ut ornare lectus sit amet est.</p>
                 </div>
                 <div id="assembly">
-                    <img src="img/euphoria-filler-01.jpg" />
-                    <img src="img/little-fires-everywhere.png" />
+                    <h2>Assembly</h2>
+                    <div class="assembly-content">
+                        <img src="img/euphoria-filler-01.jpg" />
+                        <img src="img/little-fires-everywhere.png" />
+                    </div>
                 </div>
-                <aside class="pattern-section-jump">
-                    <h2>Jump to:</h2>
-                    <button><a href="#materials">Materials</a></button>
-                    <button><a href="#circuit-diagram">Circuit Diagram</a></button>
-                    <button><a href="#sweater-pattern">Sweater Pattern</a></button>
-                    <button><a href="#assembly">Assembly</a></button>
-                </aside>
             </article>
           <hr>
         </div>
