Added styles to 'jump to' pattern section, making the background slightly transparent so content can still be seen on scroll

--- a/crochet-hub-pattern-post.html
+++ b/crochet-hub-pattern-post.html
@@ -59,12 +59,14 @@
             <article class="blog-single-post">
                 <h1>JW Anderson Inspired, Light Up Crochet Cardigan | Free Pattern & Turotial</h1>
                 <h3 class="blog-post-metadata">Posted on December 01, 2020 by <span>Emmy</span></h3>
-                <aside class="pattern-section-jump">
+                <aside class="pattern-section-jump sticky">
                     <h2>Jump to:</h2>
-                    <button><a href="#materials">Materials</a></button>
-                    <button><a href="#circuit-diagram">Circuit Diagram</a></button>
-                    <button><a href="#pattern">Pattern</a></button>
-                    <button><a href="#assembly">Assembly</a></button>
+                    <div class="pattern-section-jump-buttons">
+                        <button><a href="#materials">Materials</a></button>
+                        <button><a href="#circuit-diagram">Circuit Diagram</a></button>
+                        <button><a href="#pattern">Pattern</a></button>
+                        <button><a href="#assembly">Assembly</a></button>
+                    </div>
                 </aside>
                 <img src="img/crochet-pattern-filler.jpg" alt="Filler Image" />
                 <p class="photo-credit">Image Courtesy of Pexels</p>
